# sc-tools

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  on_create.sh
sc_explorer_cli/: cli.py  sc_explorer_cli.py
sc_tools/: __init__.py  apdu.py  card_connection.py  card_response.py  dump_binary.py  methods.py  readers.py  well_known_rids.csv
