[tool.poetry]
name = "sc-tools"
version = "0.1.0"
description = "Tools for exploration inside Smart Cards"
authors = ["Reverse Engineering Freaks OSS Project"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "sc_tools"},
    {include = "sc_explorer_cli"}
]

[tool.poetry.scripts]
sc-explorer = "sc_explorer_cli.cli:main"

[tool.poetry.dependencies]
python = "^3.13"
ber-tlv = "^0.0.6"
fire = "^0.7.0"
iso3166 = "^2.1.1"
nfcpy = "^1.0.4"
pyscard = "^2.2.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
